# Cordia

./: .gitignore  BEACON_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  SIGNALING_SETUP.md  build.ps1  create-icons.ps1  docker-compose.yml  generate-icons.js  index.html  launch1.bat  launch2.bat  launch3.bat  launch4.bat  package-lock.json  package.json  stress-test.html  stress-test.mjs  tailwind.config.js  vite.config.ts
.github/workflows/: docker-build.yml
beacon-server/: Dockerfile.prebuilt
beacon-server/src/: main.rs
beacon-server/src/handlers/: message.rs  ws.rs
beacon-server/src/state/: mod.rs  swarm.rs
deploy/: DOCKGE_SETUP.md  README.md  docker-compose.yml
docs/: DESIGN_BOUNDARIES.md  README.md  ROADMAP_DEV.md  TESTING.md
signaling-server/: Cargo.toml  Dockerfile  Dockerfile.prebuilt  meta.json
signaling-server/src/: main.rs  security.rs
signaling-server/src/handlers/: db.rs  friends.rs  http.rs  message.rs  mod.rs  redis.rs  ws.rs
signaling-server/src/state/: events.rs  friends.rs  mod.rs  presence.rs  signaling.rs  voice.rs
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: account_manager.rs  audio_settings.rs  house.rs  identity.rs  main.rs  server.rs  signaling.rs  waveform.rs
src/components/: ChatMediaSlot.tsx  ChatMusicAttachmentCard.tsx  ChatSingleMediaAspect.tsx  CustomVideoPlayer.tsx  FileIcon.tsx  FilenameEllipsis.tsx  FriendsDrawer.tsx  FriendsOverlay.tsx  HouseSyncBootstrap.tsx  MediaPreviewModal.tsx  MediaPreviewModalAudio.tsx  MessageBubble.tsx  NotificationCenterButton.tsx  NotificationsModal.tsx  ServerReplicationIndicator.tsx  ServerSyncBootstrap.tsx  SettingsModal.tsx  SettingsPanel.tsx  SignalingStatus.tsx  TitleBar.tsx  Tooltip.tsx  TransferCenterActiveUploadStripRow.tsx  TransferCenterButton.tsx  TransferCenterDownloadRow.tsx  TransferCenterFilterPills.tsx  TransferCenterHistorySeedingPanes.tsx  TransferCenterModal.tsx  TransferCenterPanel.tsx  TransferCenterSeedingRow.tsx  UserCard.tsx  UserProfileCard.tsx  VoiceLevelMeter.tsx  WindowResizeHandles.tsx
src/components/icons/: ImageDownPlay.tsx  index.ts
src/components/music/: musicWaveformShared.ts  useMusicWaveform.ts  waveformDecodeCache.ts
src/components/server/: ServerChatTimeline.tsx  ServerComposer.tsx  ServerMessageContent.tsx  ServerVoiceHeader.tsx
src/components/ui/: button.tsx  card.tsx  select.tsx  slider.tsx  switch.tsx
src/contexts/: ChatInlineAudioContext.tsx  EphemeralMessagesContext.tsx  FriendsContext.tsx  IdentityContext.tsx  MediaPreviewContext.tsx  PresenceContext.tsx  ProfileContext.tsx  RemoteProfilesContext.tsx  ServersContext.tsx  SettingsModalContext.tsx  SidebarWidthContext.tsx  SignalingContext.tsx  SpeakingContext.tsx  ThemeContext.tsx  VideoFullscreenContext.tsx  VoicePresenceContext.tsx  WebRTCContext.tsx
src/lib/: attachmentShareInChat.ts  audio.ts  bytes.ts  chatMediaPreview.ts  chatMessageLayout.ts  downloadSettings.ts  featureFlags.ts  fileType.ts  filename.ts  friend-api.ts  receiverAudio.ts  remoteAudioAnalyzer.ts  tauri.ts  transferCenterFilters.ts  transferCenterSelectors.ts  transferListMedia.ts  useWindowSize.ts  userAvatarStyle.ts  webrtc.ts
src/lib/swarm/: peerTransport.ts  pieceScheduler.ts  resumeStore.ts  swarmCoordinator.ts  types.ts
src/pages/: AccountSelectPage.tsx  AccountSetupPage.tsx  HouseListPage.tsx  HouseViewPage.tsx  IdentityRestorePage.tsx  IdentitySetupPage.tsx  ServerListPage.tsx  ServerViewPage.tsx  SettingsPage.tsx  SplashPage.tsx  TransfersPage.tsx
src/pages/settings/: AccountSettings.tsx  AudioSettings.tsx  ConnectionSettings.tsx  CustomizeSettings.tsx  DownloadsSettings.tsx  InfoExportSettings.tsx
src/stores/: ephemeralMessagesStore.ts
src/theme/: presets.ts
