[package]
name = "signaling-server"
version = "0.1.0"
edition = "2021"
description = "WebSocket signaling server for Roommate P2P voice chat"
authors = ["Pey-K"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
hyper-tungstenite = "0.11"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"

