[package]
name = "cordia-beacon"
version = "0.1.0"
edition = "2021"
description = "Beacon server for Cordia P2P voice chat"
authors = ["Pey-K"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
sysinfo = "0.31"

axum = { version = "0.7", features = ["ws", "macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional durability backends (enabled in production builds via features)
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"], optional = true }
redis = { version = "0.25", features = ["tokio-comp"], optional = true }

[features]
default = []
postgres = ["dep:sqlx"]
redis-backend = ["dep:redis"]

