[package]
name = "roommate"
version = "1.0.0"
description = "Voice chat application built with Tauri"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["net", "time", "rt"] }
winreg = { version = "0.50", optional = true }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
windows-registry = ["winreg"]
