[package]
name = "cordia"
version = "1.0.0"
description = "Voice chat application built with Tauri"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "window-all", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["net", "time", "rt"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
winreg = { version = "0.50", optional = true }
winapi = { version = "0.3", features = ["winuser", "shellapi"], optional = true }

# Phase 2: Cryptographic house model
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.21"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
windows-registry = ["winreg", "winapi"]
